test/good/13-nested-funcs.mac



int main() {
    int a = 0;
    int f1() {
        a = a+1;
        int a = 0;
        int f2() {
            a = a+1;
            return 0;
        }
        return f2();
    }
    f1();
    return a;
}