test/bad/arr-too-shallow.mac



int main() {
    int[] a = new int[5];
    return a[1][1];
}